<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_medium"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_patch"
            android:layout_width="@dimen/patch_size_small"
            android:layout_height="@dimen/patch_size_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:contentDescription="@null"
            app:layout_constraintEnd_toStartOf="@+id/txt_meta_data"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Mission Plausible with an extra long title" />

        <TextView
            android:id="@+id/txt_meta_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/img_patch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_patch"
            app:layout_constraintTop_toTopOf="@+id/img_patch"
            tools:text="Flight 123 • Successful • 09/29/2013" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_meta_data"
            tools:text="Following second-stage separation, SpaceX conducted a second controlled-descent test of the discarded booster vehicle and achieved the first successful controlled ocean touchdown of a liquid-rocket-engine orbital booster. Following touchdown the first stage tipped over as expected and was destroyed. This was the first Falcon 9 booster to fly with extensible landing legs and the first Dragon mission with the Falcon 9 v1.1 launch vehicle." />

        <TextView
            android:id="@+id/txt_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_description"
            tools:text="1 of 6 Photos"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_photos"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_external_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/details_external_links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photos" />

        <Button
            android:id="@+id/btn_reddit_link"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/reddit"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="@dimen/btn_external_link_size"
            app:layout_constraintEnd_toStartOf="@+id/btn_wiki_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_external_links" />

        <Button
            android:id="@+id/btn_wiki_link"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/wikipedia"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="@dimen/btn_external_link_size"
            app:layout_constraintEnd_toStartOf="@+id/btn_webcast_link"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_reddit_link"
            app:layout_constraintTop_toBottomOf="@+id/txt_external_links" />

        <Button
            android:id="@+id/btn_webcast_link"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/webcast"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="@dimen/btn_external_link_size"
            app:layout_constraintEnd_toStartOf="@+id/btn_article_link"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_wiki_link"
            app:layout_constraintTop_toBottomOf="@+id/txt_external_links" />

        <Button
            android:id="@+id/btn_article_link"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/article"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="@dimen/btn_external_link_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_webcast_link"
            app:layout_constraintTop_toBottomOf="@+id/txt_external_links" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

